force-app/main/default/objects/custom_create323__c/custom_create323__c.object-meta.xml
<CustomObject>
    <label>Custom created object323</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects323</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>