force-app/main/default/objects/custom_create323__c/fields/custom_create_323field564__c.field-meta.xml
<CustomField>
    <fullName>custom_create_323field564__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 323field564</label>
    <type>Checkbox</type>
</CustomField>